# a-life-cs461

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  alphaDemonstration.cpp  env_test_main.cpp  fitness_calculator.h  main  main.cpp  movement.hpp  resource_node.cpp  simulation_stats_out.csv  tile.h
Header Files/: Environment.h
Source Files/: Environment.cpp  Environment.h
biology/: biology.py  biology_tester.py
brain/: brain.hpp  brain_demo.cpp
data_visualization/: CMakeLists.txt  DataVisualizer.cpp  DataVisualizer.hpp  LiveVisualizer.cpp  LiveVisualizer.hpp  main_live_visualizer.cpp  main_visualizer.cpp
db/: schema.sql
decision_center/: CMakeLists.txt  biology.cpp  biology.hpp  biology_constants.hpp  brain.cpp  brain.hpp  entity.cpp  entity.hpp  test_entity.cpp
decision_center/tests/: test_brain_comprehensive.cpp  test_maths.cpp
entity/: bioREADME.md  biology_constants.py  entity.py  entity_tester.py
entity/biology/: biology.py
include/: auto_save.h  circular_buffer.h  db_connector.h  resource_node.h  save_manager.h
legacy/: env_test_main.cpp  test_main.cpp
legacy code/env_gen/: environment.h  main.cpp
legacy/Biochem-Prototype-Python/: Body.py
legacy/blueprints/: brain.txt
legacy/brain/: CMakeLists.txt  brain.cpp
perception_movement/: movement.cpp  movement.hpp  perception.cpp  perception.hpp
persistence/: CMakeLists.txt
simple_simulation/: CMakeLists.txt  README.md  main.cpp  simulation.h
source/: Environment.cpp  Environment.h  MathVector.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Simulation.cpp  Simulation.hpp  resource_node.h
source/entity/decision_center/: CMakeLists.txt  biology.cpp  biology.hpp  biology_constants.hpp  brain.cpp  brain.hpp  entity.cpp  entity.hpp  genome.cpp  genome.hpp  mutate.cpp  mutate.hpp  test_biology.cpp
source/entity/decision_center/tests/: test_maths.cpp
source/entity/entity_cpp/: fitness_calculator.h
source/entity/entity_python/: ENTITY_README.md  entity_tester.py
source/entity/perception_movement/: movement.cpp  movement.hpp  perception.cpp  perception.hpp
source/environment/: Environment.cpp  Environment.h  MathVector.hpp  PerlinNoise.hpp  resource_node.cpp  resource_node.h
source/simulation/: Simulation.cpp  Simulation.hpp  simulation_state.h
src/: auto_save.cpp  db_connector.cpp  resource_node.cpp  save_manager.cpp
test/: test_auto_save.cpp  test_circular_buffer_advanced.cpp  test_fitness_advanced.cpp  test_fuzzy_vision.cpp  test_genome.cpp  test_integration.cpp  test_persistence.cpp  test_resource_advanced.cpp
